fix overflow on iPhone SE

--- a/src/styles/features/preview-environment/article-collaboration.scss
+++ b/src/styles/features/preview-environment/article-collaboration.scss
@@ -2,7 +2,9 @@
 
   > .img {
     display: block;
+    height: auto;
     margin: -90px auto 0;
+    max-width: 100vw;
   }
 
   > .section {
